[package]
name = "atlas"
version = "0.1.0"
edition = "2021"
description = "Codebase knowledge graph — modules, dependencies, call chains, blast radius queries"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
walkdir = "2"
regex = "1"

[dev-dependencies]
tempfile = "3"
